--- a/src/Style.scss
+++ b/src/Style.scss
@@ -90,3 +90,8 @@ button {
     border-radius: 25px;
     width: 70%;
    }
+   @media only screen and(min-width: 360px) and (max-width: 600px) {
+    .input {
+      margin-left: 50px;
+    }
+  }
