--- a/src/Style.css
+++ b/src/Style.css
@@ -89,6 +89,6 @@ button:active {
 
 @media only screen and (min-width: 360px) and (max-width: 600px) {
   .input {
-    margin-left: 120px !important;
+    margin-left: 25% !important;
   }
 }/*# sourceMappingURL=Style.css.map */
