--- a/src/Style.scss
+++ b/src/Style.scss
@@ -92,6 +92,6 @@ button {
    }
    @media only screen and (min-width: 360px) and (max-width: 600px) {
     .input {
-      margin-left: 120px !important;
+      margin-left: 25% !important;
     }
   }
